Measure SVGViewElement Constructor

There is already usecounter (SVGSVGElementFragmentSVGViewElement), when SVGViewElement having some effect.
But this usage is already pointing to Zero

Measuring SVGViewElement constructor will give more usage details of this.

BUG=633908

Review-Url: https://codereview.chromium.org/2213423002
Cr-Commit-Position: refs/heads/master@{#410709}

Former-commit-id: 64e154a121889ecffbf0edaed11708b18257aa50