third_party/WebKit/Source/core/frame/UseCounter.h
@@ -1274,6 +1274,8 @@ public:
         ChromeLoadTimesConnectionInfo = 1498,
         ChromeLoadTimesUnknown = 1499,
 
+        SVGViewElement = 1500,
+
         // Add new features immediately above this line. Don't change assigned
         // numbers of any item, and don't reuse removed slots.
         // Also, run update_use_counter_feature_enum.py in chromium/src/tools/metrics/histograms/
